--- a/home_page/css/ttc/marker.css
+++ b/home_page/css/ttc/marker.css
@@ -24,7 +24,7 @@
 }
 
 .display_text:hover {
-    background: linear-gradient(135deg, #0077b3, #006699); /* Darker blue when hovered */
+    background: #3246FF; /* Darker blue when hovered */
 }
 
 /* Styles for the popup wrapper */
@@ -43,20 +43,21 @@
 @layer base {
     /* Style for the close button */
     .leaflet-popup-close-button {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
         background: var(--tg-theme-button-color) !important; /* Telegram blue background with gradient */
         color: var(--tg-theme-button-text-color) !important; /* Telegram close button color */
         font-size: 1.2em !important; /* Make the button a bit smaller */
         border-radius: 5px; /* Makes the button circular */
         width: 20px !important; /* Set a specific width */
         height: 20px !important; /* Set a specific height */
-        line-height: 15px !important; /* Same as height to align 'x' vertically */
-        text-align: center !important; /* Center the 'x' */
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25); /* Shadow around the popup */
     }
 }
 
 @layer base {
     .leaflet-popup-close-button:hover {
-        background: linear-gradient(135deg, #0077b3, #006699) !important; /* Darker blue when hovered */
+        background: #3246FF !important; /* Darker blue when hovered */
     }
 }
