--- a/home_page/css/main.css
+++ b/home_page/css/main.css
@@ -6,6 +6,8 @@
 :root {
 	--index: calc(1vw + 1vh);
 	--transition: 1.5s cubic-bezier(.05, .5, 0, 1);
+	--bst_blue: #3246FF;
+	--bst_green: #01FEB2;
 }
 @font-face {
 	font-family: kamerik-3d;
@@ -19,7 +21,7 @@
 body {
     height: 100%;
     max-height: 100%;
-    background: linear-gradient(45deg, #3246FF, #01FEB2);
+    background: linear-gradient(45deg, var(--bst_blue), var(--bst_green));
 	background-color: #000;
 	color: #fff;
 	font-family: kamerik-3d;
@@ -74,14 +76,23 @@ body {
 .layer-6 {
 	transform: translateZ(380px);
 }
+.layer-1::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, rgba(50, 70, 255, 0.3), rgba(1, 254, 178, 0.35));
+}
 .layer-2::after{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Черный фон с 50% прозрачностью */
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
 }
 .hero-content {
 	font-size: calc(var(--index) * 2.1);
@@ -92,7 +103,7 @@ body {
 	margin-top: calc(var(--index) * 5.5);
 }
 .hero-content span, h1, .hero-content__p {
-    text-shadow: 3px 3px #3246FF;
+    text-shadow: 3px 3px var(--bst_blue);
 }
 .hero-content span {
     font-size: calc(var(--index) * 1);
@@ -127,12 +138,12 @@ body {
 }
 
 @keyframes colorChange {
-    0% { background-color: #3246FF; }
-    50% { background-color: #01FEB2; }
-    100% { background-color: #3246FF; }
-    0% { color: #01FEB2; }
-    50% { color: #3246FF; }
-    100% { color: #01FEB2; }
+    0% { background-color: var(--bst_blue); }
+    50% { background-color: var(--bst_green); }
+    100% { background-color: var(--bst_blue); }
+    0% { color: var(--bst_green); }
+    50% { color: var(--bst_blue); }
+    100% { color: var(--bst_green); }
 }
 
 .layer-4, .layer-5, .layer-6 {
